--- a/memory.css
+++ b/memory.css
@@ -8,11 +8,14 @@ header:{
 table {margin: auto}
 .clicked {
 	outline: dashed blue 3px;
-	filter: opacity(50%);
+	/*filter: opacity(50%);*/
+	box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
+img{margin: 15px}
 img.OK, button.clicked {
 	outline: none;
 	filter: none;
+	box-shadow: rgb(85, 91, 255) 0px 0px 0px 3px, rgb(31, 193, 27) 0px 0px 0px 6px, rgb(255, 217, 19) 0px 0px 0px 9px, rgb(255, 156, 85) 0px 0px 0px 12px, rgb(255, 85, 85) 0px 0px 0px 15px;
 }
 select {
   font-size: 1.2em;
