--- a/memory.css
+++ b/memory.css
@@ -11,7 +11,9 @@ table {margin: auto}
 	/*filter: opacity(50%);*/
 	box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
-img{margin: 15px}
+img {
+	margin: 15px;
+}
 img.OK, button.clicked {
 	outline: none;
 	filter: none;
@@ -21,4 +23,8 @@ select {
   font-size: 1.2em;
   background: #A4C2E3;
   border-radius: 5px;
+}
+button {
+  font-size: 2em;
+  background-color: #48beb3;
 }
