--- a/memory.css
+++ b/memory.css
@@ -7,7 +7,7 @@ header:{
 }
 table {margin: auto}
 .clicked {
-	outline: dashed blue 3px;
+	/*outline: dashed blue 3px;*/
 	/*filter: opacity(50%);*/
 	box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
